WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203280
[SVG2] Fix SVGElement to conform with SVG2
https://bugs.webkit.org/show_bug.cgi?id=203280
Summary
[SVG2] Fix SVGElement to conform with SVG2
Said Abou-Hallawa
Reported
2019-10-22 16:59:24 PDT
The interface of SVGElement is defined here:
https://www.w3.org/TR/SVG2/types.html#InterfaceSVGElement
. Related WPT tests:
https://wpt.fyi/results/svg/historical.html?label=experimental&label=master&aligned
.
Attachments
Patch
(34.20 KB, patch)
2019-10-22 17:10 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(34.21 KB, patch)
2019-10-22 18:15 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Patch
(84.34 KB, patch)
2019-10-23 00:35 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2019-10-22 17:10:21 PDT
Created
attachment 381634
[details]
Patch
Said Abou-Hallawa
Comment 2
2019-10-22 18:15:23 PDT
Created
attachment 381640
[details]
Patch
Said Abou-Hallawa
Comment 3
2019-10-23 00:35:14 PDT
Created
attachment 381663
[details]
Patch
WebKit Commit Bot
Comment 4
2019-10-23 14:21:41 PDT
The commit-queue encountered the following flaky tests while processing
attachment 381663
[details]
: fetch/fetch-worker-crash.html
bug 187257
(author:
youennf@gmail.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2019-10-23 14:22:47 PDT
Comment on
attachment 381663
[details]
Patch Clearing flags on attachment: 381663 Committed
r251499
: <
https://trac.webkit.org/changeset/251499
>
WebKit Commit Bot
Comment 6
2019-10-23 14:22:49 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2019-10-23 14:23:21 PDT
<
rdar://problem/56554246
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug