[SVG2] Fix SVGElement to conform with SVG2 https://bugs.webkit.org/show_bug.cgi?id=203280

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2019-10-23
Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/svg/historical-expected.txt:
Some sub-tests are now passing with this change.

Source/WebCore:

The interface of SVGElement is defined here:
    https://www.w3.org/TR/SVG2/types.html#InterfaceSVGElement.

-- Remove SVGElement.getPresentationAttribute.
-- Remove the SVGElement attributes xmllang and xmlspace.
-- Remove the class SVGLangSpace

* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* svg/SVGComponentTransferFunctionElement.cpp:
(WebCore::SVGComponentTransferFunctionElement::svgAttributeChanged):
Fix a bug. This function was calling SVGLangSpace::isKnownAttribute()
instead of calling PropertyRegistry::isKnownAttribute().

* svg/SVGElement.cpp:
(WebCore::SVGElement::SVGElement):
(WebCore::SVGElement::parseAttribute):
(WebCore::SVGElement::svgAttributeChanged):
(WebCore::SVGElement::getPresentationAttribute): Deleted.
* svg/SVGElement.h:
* svg/SVGElement.idl:
* svg/SVGFilterPrimitiveStandardAttributes.cpp:
(WebCore::SVGFilterPrimitiveStandardAttributes::svgAttributeChanged):
Fix a bug. This function was calling SVGLangSpace::isKnownAttribute()
instead of calling PropertyRegistry::isKnownAttribute().

* svg/SVGLangSpace.cpp: Removed.
* svg/SVGLangSpace.h: Removed.
* svg/SVGUseElement.cpp:
(WebCore::SVGUseElement::svgAttributeChanged):

LayoutTests:

* platform/gtk/svg/custom/getPresentationAttribute-expected.png: Removed.
* platform/gtk/svg/custom/getPresentationAttribute-expected.txt: Removed.
* platform/ios/svg/custom/getPresentationAttribute-expected.txt: Removed.
* platform/mac/svg/custom/getPresentationAttribute-expected.png: Removed.
* platform/mac/svg/custom/getPresentationAttribute-expected.txt: Removed.
* platform/mac/svg/custom/getPresentationAttribute-modify-expected.png: Removed.
* platform/win/svg/custom/getPresentationAttribute-expected.txt: Removed.
* platform/wincairo/svg/custom/getPresentationAttribute-expected.txt: Removed.
* platform/wpe/svg/custom/getPresentationAttribute-expected.txt: Removed.
* svg/custom/getPresentationAttribute.svg: Removed.
* svg/custom/path-getPresentationAttribute-crash-expected.txt: Removed.
* svg/custom/path-getPresentationAttribute-crash.html: Removed.
SVGElement.getPresentationAttribute has to be removed.

Canonical link: https://commits.webkit.org/216734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251499 268f45cc-cd09-0410-ab3c-d52691b4dbfc